--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://Pohorielova.github.io/goit-react-hw-06-phonebook/",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.4",
+    "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +13,7 @@
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-is": "^16.13.1",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "shortid": "^2.2.16",
     "styled-components": "^5.3.6",
